# jampio-renderer

./: CMakeLists.txt  README.md
src/: backend.h  cmds.h  cvars.h  glimp.h  image.cpp  image.h  init.h  model.h  png.cpp  png.h  qgl.h  shader.h
src/types/: dlight.h  drawSurf.h  fog.h  frontEndCounters.h  glstate.h  mgrid.h  mnode.h  orientationr.h  skin.h  skinSurface.h  srfPoly.h  srfTerrain.h  trGlobals.h  trMiniRefEntity.h  trRefEntity.h  trRefdef.h  viewParms.h  world.h
